--- a/Megatron-LM/scripts/ds_zero2_config.json
+++ b/Megatron-LM/scripts/ds_zero2_config.json
@@ -1,5 +1,5 @@
 {
-  "train_batch_size": 8,
+  "train_batch_size": 16,
   "gradient_accumulation_steps": 1,
   "steps_per_print": 1,
   "optimizer": {
@@ -23,8 +23,7 @@
   },
   "activation_checkpointing": {
     "partition_activations": true,
-    "contiguous_memory_optimization": false,
-    "synchronize_checkpoint_boundary": true
+    "contiguous_memory_optimization": false
   },
   "wall_clock_breakdown": false
 }
